修改金字榜

--- a/views/data_center.html
+++ b/views/data_center.html
@@ -141,7 +141,7 @@
         <div class="right-cont" style="border: none">
             <div class="right-title" style="background: #f3f3f3;">
                 <div class="tit active" style="width: 202px;">用户热搜榜</div>
-                <div class="tit" style="width: 202px;">金子榜</div>
+                <div class="tit" style="width: 202px;">金字榜</div>
             </div>
             <div class="show">
                 {% if datalist.length > 0 %}
