--- a/views/about/university.html
+++ b/views/about/university.html
@@ -566,7 +566,7 @@
 <div class="banner" style="background-image:url({{schooltopic.sch_background_map}});height: 500px; overflow:hidden;background-size:cover;background-position: center center">
   <div class="wrap1">
     <div class="btn-box">
-      <a href="//vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
+      <a href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
       <a class="md-btn" href="//www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
     </div>
   </div>
