--- a/views/center_main.html
+++ b/views/center_main.html
@@ -134,8 +134,8 @@
             <div style="width:1180px;height: 100%;margin: 0 auto;position: relative;">
                 <div class="zhezhaof"></div>
                 <img class="img1" src="{{helper.cdnhost}}/assets/img/zhezhao.png" alt="">
-                <img class="img2" src="{{helper.cdnhost}}/assets/img/zhezhao1.png" alt="">
-                <img class="img3" src="{{helper.cdnhost}}/assets/img/zhezhao2.png" alt="">
+                <img class="img2" src="{{helper.cdnhost}}/assets/img/zhezhao_1.png" alt="">
+                <img class="img3" src="{{helper.cdnhost}}/assets/img/zhezhao_2.png" alt="">
                 <img class="img4" src="{{helper.cdnhost}}/assets/img/zhezhao3.png" alt="">
             </div>
             
