修改顾问个人中心蒙层

--- a/views/center_main.html
+++ b/views/center_main.html
@@ -76,11 +76,11 @@
         .zhezhao .img3{
             position: absolute;
             top: 38%;
-            left: 40%;
+            left: 43%;
         }
         .zhezhao .img4{
             position: absolute;
-            top: 65%;
+            top: 63%;
             left: 48%;
         }
         .zhezhao_wenzhang {
@@ -325,7 +325,7 @@
             $('#gwzs1').show();
             $('body').css('overflow','hidden');
         } else {
-            if (!cookie('yhrs')) {
+            if (!cookie('yhrs1')) {
                 console.log('1111')
                 $('#zhezhaoy').show();
                 $('body').css('overflow','hidden');
@@ -353,7 +353,7 @@
             $('#gwzs').hide();
             $('#gwzs1').hide();
             $('body').css('overflow','auto');
-            if (!cookie('yhrs')) {
+            if (!cookie('yhrs1')) {
                 console.log('1111')
                 $('#zhezhaoy').show();
                 $('body').css('overflow','hidden');
@@ -382,7 +382,7 @@
             // })
         })
         $('#zhezhaoy').click(function () {
-            cookie('yhrs', '1', {path: "/", domain: js_api_config.domain, expires: 36500});
+            cookie('yhrs1', '1', {path: "/", domain: js_api_config.domain, expires: 36500});
             $(this).hide();
             $('body').css('overflow','auto');
         });
