--- a/views/header_new.html
+++ b/views/header_new.html
@@ -30,6 +30,7 @@
   <script  src="{{helper.cdnhost}}/assets/js/common/common_pro.js"></script>
   {% endif %}
   <script src="{{helper.cdnhost}}/assets/js/common/common_base2.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/changeFont.js"></script>
   <script type='text/javascript'>
     !function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");
     gio('init', 'b5eff012adf61f54', {});
