--- a/views/about/lawyer.html
+++ b/views/about/lawyer.html
@@ -48,7 +48,7 @@
 {% include "widget/common_hide/common_hide.html"%}
 {# 大学排名 #}
 {# 头部导航 #}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_yimin.html" %}
 {% import "widget/new_nav_first/yimin_search_nav.html" as yimin_search_nav%}
 {{ yimin_search_nav.yimin_search_nav(tdk,helper) }}
 
