--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -36,7 +36,7 @@
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_yimin.html" %}
 {% import "widget/new_nav_first/yimin_search_nav.html" as yimin_search_nav %}
 {{ yimin_search_nav.yimin_search_nav(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
