--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -141,7 +141,7 @@
 {# 大学排名 #}
 {# 头部导航 #}
 {% include "widget/common_hide/common_hide.html"%}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_liuxue.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
