--- a/views/case.html
+++ b/views/case.html
@@ -50,7 +50,7 @@
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_liuxue.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
