--- a/views/news.html
+++ b/views/news.html
@@ -135,7 +135,7 @@
 </head>
 <body style="min-width: 1200px;background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_liuxue.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
