--- a/views/so_article.html
+++ b/views/so_article.html
@@ -36,7 +36,7 @@
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_liuxue.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
@@ -142,86 +142,7 @@
             slidesPerGroup : 2,
           pagination: true
         });
-/*        var area = cookie('currentarea') ? cookie('currentarea') : 1;
-        var keyword = $('#result-keyword').text();
-        var load_page = $('#load-more-article').attr('data-cur_page')*1+1;
-        function more_artice (art_list) {
-            var artHtml = '';
-            for (var i = 0; i < art_list.length; i++) {
-                var item = art_list[i];
-                artHtml+='<div class="result-item clearfix">'+
-                            '<div class="item-adviser">'+
-                            '<a href="'+fn.urlgen(item.user_info.uid.toString())+'"><img src="'+fn.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)+'" alt="" class="adviser-avatar"/></a><span>'+ item.user_info.nickname+ '</span><img src="../assets/img/1v.png" alt="" class="flag"/>'+
-                            '</div>'+
-                            '<div class="item-info">'+
-                            '<div class="info-top clearfix">';
-                        if (item.type == 1) {
-                            artHtml+='<a class="info-title" href="'+fn.urlgen('case',+item.id.toString())+'">'+ item.title +'</a>';
-                        }
-                        else{
-                            artHtml+='<a class="info-title" href="'+fn.urlgen('article',+item.id.toString())+'">'+ item.title +'</a>';
-                        }
-                artHtml+='<div class="info-tags">';
-                if (item.tag_list) {
-                    artHtml+='<span>'+ item.tag_list +'</span>';
-                }
-                artHtml+= '</div>'+
-                    '</div>'+
-                    '<div class="info-desc">'+ fn.ellipsis(item.introduce);
-                if (item.type == 1) {
-                    artHtml+= '<a href="'+fn.urlgen('case',+item.id.toString())+'">【查看详情】</a>'
-                }
-                else {
-                    artHtml+= '<a href="'+fn.urlgen('article',+item.id.toString())+'">【查看详情】</a>'
-                }
-                artHtml+= '</div>'+
-                '<div class="time">'+ fn.getFormatDate(item.add_time,5) +'</div>'+
-                '</div>'+
-                '</div>';
-            }
-            $('#result-content').append($(artHtml));
-        }
-        $('#load-more-article').on('click', function () {
-            var page = $(this).data('page')*1+1;
-            var thisObj = $(this);
-            var per_page = 15;
-            var order = $('#result-type-bar').data('order');
-            $.ajax({
-                url: ajaxUrlPrefix.nodeapi + '/cmsapi/load_more_article',
-                datatype: 'json',
-                data: {
-                    key_word: encodeURI(keyword),
-                    city_id: area,
-                    per_page: per_page,
-                    page: page,
-                    order: order
-                },
-                success: function (revmsg) {
-                    if (revmsg.code == 0) {
-                        if (!revmsg.data.list) return;
-                        var len = revmsg.data.list.length;
-                        if (len == 0) {
-                            thisObj.html('文章加载完毕')
-                        }
-                        else if (0 < len && len < per_page) {
-                            thisObj.html('文章加载完毕');
-                            more_artice(revmsg.data.list);
-                            thisObj.data('page', page);
-                        }
-                        else {
-                            more_artice(revmsg.data.list);
-                            thisObj.data('page', page);
-                        }
-                    }
-                    else {
-                        thisObj.html('加载更多出错了，请刷新');
-                    }
-                },
-                error: function(XMLHttpRequest, textStatus, errorThrown) {
-                    console.log('加载更多出错了！');
-                }
-            })
-        })*/
+        
     })
 
 </script>
