--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -425,7 +425,7 @@
     
   } else {
     $(".top").empty();
-    var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
+    var val = '<div class="dui-layout-lg top-con" style="position: relative;width: 1200px;">'+
               '<div class="top-con-left" style="display: inline-block;">'+
               '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" >'+
               '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
