--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -292,7 +292,7 @@ input[type="checkbox"] {
       $(".top").append(val);
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-left" style="display: inline-block;width: 40%;">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
